# georg

./: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240707094309_create_geo_locations.sql
src-tauri/src/: db.rs  main.rs  models.rs
src-tauri/src/geo/: mod.rs  models.rs
src-tauri/src/parse/: assistance.rs  candidates.rs  mod.rs  models.rs
src-tauri/src/tests/: Bewerbungen_und_Anfragen_Begleitungen_Test.xlsx  Daten_der_SchulbegleiterInnen_Test.xlsx  Ubersichtsdaten_gesamte_Schulbegleitung_Test.xlsx
src/lib/components/: CandidateDrawer.svelte  ChildDrawer.svelte  DirectoryRow.svelte  DirectoryTable.svelte  LeftSideBar.svelte  directoryTableModals.ts
src/lib/components/dataTable/: Datatable.svelte  RowsPerPage.svelte
src/lib/components/dataTableCandidates/: DatatableCandidates.svelte  RowCount.svelte  RowsPerPage.svelte  Search.svelte  TableRow.svelte  ThSort.svelte
src/lib/components/dataTableChildren/: DatatableChildren.svelte
src/lib/components/datatables/: DatatableAccompaniedChildren.svelte  DatatableCandidates.svelte  DatatableChildren.svelte  DatatableSchoolAssistants.svelte  Pagination.svelte  TableRowAccompaniedChildren.svelte  TableRowCandidates.svelte  TableRowChildren.svelte  (+2 more)
src/lib/data/: data.ts
src/lib/models/: models.ts
src/lib/stores/: path.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/candidates/: +page.svelte
src/routes/school-assistance/: +page.svelte
src/routes/settings/: +page.svelte
(+3 files in other folders)
